--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.tailwindcss.com"></script>
         <title>TAMER.com.vc</title>
+        <link rel="icon" type="image/png" href="logo.png" />
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link
             rel="stylesheet"
