--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.tailwindcss.com"></script>
         <title>TAMER.com.vc</title>
-        <link rel="icon" type="image/png" href="/favicon.png" />
+        <link rel="apple-touch-icon" href="favicon.png" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="icon" type="image/png" sizes="any" href="favicon.png" />
+        <link rel="mask-icon" href="favicon.png" color="#000000" />
+        <link rel="apple-touch-icon-precomposed" href="favicon.png" />
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link
             rel="stylesheet"
@@ -24,7 +28,7 @@
                 </h1>
             </div>
             <div class="col-span-1 row-span-2">
-                <img class="rounded-md" src="/tamer.jpg" />
+                <img class="rounded-md" src="tamer.jpg" />
             </div>
             <div class="tile col-span-2">
                 <h1 class="tile-marker font-garet">Quem Sou?</h1>
