fix: responsive picture placement

--- a/index.html
+++ b/index.html
@@ -1,114 +1,107 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="https://cdn.tailwindcss.com"></script>
-        <title>TAMER.com.vc</title>
-        <link rel="apple-touch-icon" href="favicon.png" />
-        <link rel="icon" type="image/x-icon" href="favicon.ico" />
-        <link rel="icon" type="image/png" sizes="any" href="favicon.png" />
-        <link rel="apple-touch-icon-precomposed" href="favicon.png" />
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-            integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
-    </head>
-    <body>
-        <div class="container m-auto mt-4 grid grid-cols-3 gap-4">
-            <div class="tile col-span-full">
-                <h1 class="tile-marker font-myriad text-center text-4xl">
-                    TAMER®
-                </h1>
-            </div>
-            <div class="col-span-1 row-span-2">
-                <img class="rounded-md" src="tamer.jpg" />
-            </div>
-            <div class="tile col-span-2">
-                <h1 class="tile-marker font-garet">Quem Sou?</h1>
-                <p class="font-helv">
-                    Sou Valter Tamer, psicanalista, neurolinguista, professor
-                    universitário nas áreas de gestão empresarial e gestão de
-                    pessoas, mentor e embaixador honorário da Red Global de
-                    Mentores, especialista em Programação Neurolinguística
-                    Sistêmica, autossabotadores e comportamento humano.
-                </p>
-            </div>
-            <div class="tile col-span-2">
-                <h1 class="tile-marker font-garet">Um pouco sobre mim</h1>
-                <p class="font-serif">
-                    Depois de 35 horas de imersão, liguei o foda-se para a vida
-                    que eu tinha, abandonei a corrida dos ratos e fui me
-                    preparar para viver o meu sonho de fazer pelas outras
-                    pessoas o que "aqueles caras" fizeram por mim, naquele fim
-                    de semana. <br />
-                    Tudo começou quando, a convite da minha irmã, decidi fazer
-                    um treinamento diferente de tudo o que eu já tinha feito.
-                    <br />
-                    Minha vida ganhou sentido, eu saí da escuridão da dúvida,
-                    venci minhas inseguranças e, quatro anos depois, estava
-                    realizando a primeira turma do Metamorphosis, minha própria
-                    imersão, com o meu toque, com a minha pegada. <br />
-                    Em 2003, a convite de uma das mais tradicionais
-                    universidades do Rio de Janeiro, criei, estruturei e
-                    inaugurei a primeira disciplina com foco em gente, em
-                    preparar pessoas para lidar com pessoas no ambiente de
-                    trabalho. Foi uma experiência incrível, um marco na minha
-                    vida. Só que a vida é feita de escolhas e eu tive que fazer
-                    a minha, apesar dos excelentes resultados e mesmo tendo sido
-                    eleito, pelos alunos, o melhor professor do período: deixar
-                    a universidade, para me dedicar totalmente ao meu sonho.<br />
-                    Aos 46 anos, no auge da minha vida, tive uma hemorragia
-                    cerebral. Era a vida me tirando da zona de conforto e me
-                    dando a oportunidade de nascer de novo e provar para os meus
-                    alunos que as coisas que eu compartilho com eles
-                    funcionam.<br />
-                    Em 2020, precisei de coragem para aceitar que o mundo tinha
-                    mudado de repente, que a vida é feita de ciclos e que eu
-                    precisava me reciclar.<br />
-                    Precisei de muita flexibilidade para mergulhar de cabeça
-                    nesse mar agitado do digital, onde eu era um ilustre
-                    desconhecido e não sabia nadar, apesar dos meus 20 anos de
-                    experiência presencial e milhares de alunos e alunas
-                    espalhados por esse mundão.<br />
-                    Eu acredito que as pessoas pagam um preço muito alto por
-                    viver no automático e pelo seu baixo nível de
-                    autoconhecimento. Eu acredito que só o desenvolvimento
-                    pessoal pode salvar o mundo. Eu acredito que a única solução
-                    para o ser humano é reconectar-se a si mesmo, às outras
-                    pessoas e à natureza. Eu acredito na autorresponsabilidade e
-                    no pensamento sistêmico como atitude e como forma de vida.
-                    Eu acredito que a mudança é um processo, não um fenômeno, e
-                    que esse processo pode ser mais prazeroso do que
-                    doloroso.<br />
-                    Eu não sou um vendedor de cursos, eu não sou um guru, eu não
-                    acredito em soluções mágicas. Eu estou ajudando a construir
-                    um mundo melhor, ao qual todos queiram pertencer.<br />
-                    Minha missão é transformar a sua essência em potência, para
-                    que você viva uma vida integral e plena.<br />
-                    Se você quer a minha orientação e o meu acompanhamento na
-                    sua jornada pessoal,
-                    <a
-                        class="text-blue-600 underline visited:text-purple-600 hover:text-blue-800"
-                        href="https://pt.surveymonkey.com/r/tamermentoring"
-                        >clique no link</a
-                    >
-                    e aplique para a minha mentoria.
-                </p>
-            </div>
-            <div class="tile col-span-full text-center">
-                <a
-                    class="text-blue-600 underline visited:text-purple-600 hover:text-blue-800"
-                    href="https://instagram.com/tamercomvc"
-                >
-                    <i class="fa-brands fa-instagram text-lg"></i>
-                </a>
-            </div>
-        </div>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>TAMER.com.vc</title>
+    <link rel="apple-touch-icon" href="favicon.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/png" sizes="any" href="favicon.png" />
+    <link rel="apple-touch-icon-precomposed" href="favicon.png" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+
+  <body>
+    <div class="container p-2 grid grid-cols-3 gap-4">
+      <div class="tile md:col-span-full">
+        <h1 class="tile-marker font-myriad text-center text-4xl">TAMER®</h1>
+      </div>
+      <div class="row-start-1 md:col-span-1 md:row-span-2">
+        <img class="object-cover object-top h-12 w-12 md:h-auto md:w-auto rounded-full md:rounded-md" src="tamer.jpg" />
+      </div>
+      <div class="tile col-span-full md:col-span-2">
+        <h1 class="tile-marker font-garet">Quem Sou?</h1>
+        <p class="font-helv">
+          Sou Valter Tamer, psicanalista, neurolinguista, professor
+          universitário nas áreas de gestão empresarial e gestão de pessoas,
+          mentor e embaixador honorário da Red Global de Mentores, especialista
+          em Programação Neurolinguística Sistêmica, autossabotadores e
+          comportamento humano.
+        </p>
+      </div>
+      <div class="tile col-span-full md:col-span-2">
+        <h1 class="tile-marker font-garet">Um pouco sobre mim</h1>
+        <p class="font-serif">
+          Depois de 35 horas de imersão, liguei o foda-se para a vida que eu
+          tinha, abandonei a corrida dos ratos e fui me preparar para viver o
+          meu sonho de fazer pelas outras pessoas o que "aqueles caras" fizeram
+          por mim, naquele fim de semana. <br />
+          Tudo começou quando, a convite da minha irmã, decidi fazer um
+          treinamento diferente de tudo o que eu já tinha feito.
+          <br />
+          Minha vida ganhou sentido, eu saí da escuridão da dúvida, venci minhas
+          inseguranças e, quatro anos depois, estava realizando a primeira turma
+          do Metamorphosis, minha própria imersão, com o meu toque, com a minha
+          pegada. <br />
+          Em 2003, a convite de uma das mais tradicionais universidades do Rio
+          de Janeiro, criei, estruturei e inaugurei a primeira disciplina com
+          foco em gente, em preparar pessoas para lidar com pessoas no ambiente
+          de trabalho. Foi uma experiência incrível, um marco na minha vida. Só
+          que a vida é feita de escolhas e eu tive que fazer a minha, apesar dos
+          excelentes resultados e mesmo tendo sido eleito, pelos alunos, o
+          melhor professor do período: deixar a universidade, para me dedicar
+          totalmente ao meu sonho.<br />
+          Aos 46 anos, no auge da minha vida, tive uma hemorragia cerebral. Era
+          a vida me tirando da zona de conforto e me dando a oportunidade de
+          nascer de novo e provar para os meus alunos que as coisas que eu
+          compartilho com eles funcionam.<br />
+          Em 2020, precisei de coragem para aceitar que o mundo tinha mudado de
+          repente, que a vida é feita de ciclos e que eu precisava me
+          reciclar.<br />
+          Precisei de muita flexibilidade para mergulhar de cabeça nesse mar
+          agitado do digital, onde eu era um ilustre desconhecido e não sabia
+          nadar, apesar dos meus 20 anos de experiência presencial e milhares de
+          alunos e alunas espalhados por esse mundão.<br />
+          Eu acredito que as pessoas pagam um preço muito alto por viver no
+          automático e pelo seu baixo nível de autoconhecimento. Eu acredito que
+          só o desenvolvimento pessoal pode salvar o mundo. Eu acredito que a
+          única solução para o ser humano é reconectar-se a si mesmo, às outras
+          pessoas e à natureza. Eu acredito na autorresponsabilidade e no
+          pensamento sistêmico como atitude e como forma de vida. Eu acredito
+          que a mudança é um processo, não um fenômeno, e que esse processo pode
+          ser mais prazeroso do que doloroso.<br />
+          Eu não sou um vendedor de cursos, eu não sou um guru, eu não acredito
+          em soluções mágicas. Eu estou ajudando a construir um mundo melhor, ao
+          qual todos queiram pertencer.<br />
+          Minha missão é transformar a sua essência em potência, para que você
+          viva uma vida integral e plena.<br />
+          Se você quer a minha orientação e o meu acompanhamento na sua jornada
+          pessoal,
+          <a
+            class="text-blue-600 underline visited:text-purple-600 hover:text-blue-800"
+            href="https://pt.surveymonkey.com/r/tamermentoring"
+            >clique no link</a
+          >
+          e aplique para a minha mentoria.
+        </p>
+      </div>
+      <div class="tile col-span-full text-center">
+        <a
+          class="text-blue-600 underline visited:text-purple-600 hover:text-blue-800"
+          href="https://instagram.com/tamercomvc"
+        >
+          <i class="fa-brands fa-instagram text-lg"></i>
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
