feat: whatsapp link

--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
   </head>
 
   <body>
-    <div class="container p-2 grid grid-cols-3 gap-4">
+    <div class="container grid grid-cols-3 gap-4 p-2">
       <div class="tile md:col-span-full">
         <h1 class="tile-marker font-myriad text-center text-4xl">TAMER®</h1>
       </div>
       <div class="row-start-1 md:col-span-1 md:row-span-2">
-        <img class="object-cover object-top h-12 w-12 md:h-auto md:w-auto rounded-full md:rounded-md" src="tamer.jpg" />
+        <img
+          class="h-12 w-12 rounded-full object-cover object-top md:h-auto md:w-auto md:rounded-md"
+          src="tamer.jpg"
+        />
       </div>
       <div class="tile col-span-full md:col-span-2">
         <h1 class="tile-marker font-garet">Quem Sou?</h1>
@@ -95,12 +98,21 @@
         </p>
       </div>
       <div class="tile col-span-full text-center">
+        &nbsp; | &nbsp;
         <a
           class="text-blue-600 underline visited:text-purple-600 hover:text-blue-800"
           href="https://instagram.com/tamercomvc"
         >
           <i class="fa-brands fa-instagram text-lg"></i>
         </a>
+        &nbsp; | &nbsp;
+        <a
+          class="text-blue-600 underline visited:text-purple-600 hover:text-blue-800"
+          href="https://bit.ly/whatsapp_tamercomvc"
+        >
+          <i class="fa-brands fa-whatsapp text-lg"></i>
+        </a>
+        &nbsp; | &nbsp;
       </div>
     </div>
   </body>
