--- a/index.html
+++ b/index.html
@@ -97,23 +97,35 @@
           e aplique para a minha mentoria.
         </p>
       </div>
-      <div class="tile col-span-full text-center">
-        &nbsp; | &nbsp;
-        <a
-          class="text-blue-600 underline visited:text-purple-600 hover:text-blue-800"
-          href="https://instagram.com/tamercomvc"
-        >
-          <i class="fa-brands fa-instagram text-lg"></i>
-        </a>
-        &nbsp; | &nbsp;
-        <a
-          class="text-blue-600 underline visited:text-purple-600 hover:text-blue-800"
-          href="https://bit.ly/whatsapp_tamercomvc"
-        >
-          <i class="fa-brands fa-whatsapp text-lg"></i>
-        </a>
-        &nbsp; | &nbsp;
-      </div>
+      <footer class="col-span-full">
+        <div class="sm:flex sm:items-center sm:justify-between">
+          <span class="text-sm text-gray-500 dark:text-gray-400 sm:text-center"
+            >© 2024
+            <a href="https://tamer.com.vc/" class="hover:underline">TAMER™</a>.
+            Todos os direitos reservados.
+          </span>
+          <div class="mt-4 flex sm:mt-0 sm:justify-center">
+            <a
+              href="https://instagram.com/tamercomvc"
+              target="_blank"
+              class="text-gray-500 hover:text-gray-900 dark:hover:text-blue-800"
+            >
+              <i class="fa-brands fa-instagram text-lg"></i>
+              Instagram
+              <span class="sr-only">Instagram page</span>
+            </a>
+            <a
+              href="https://bit.ly/whatsapp_tamercomvc"
+              target="_blank"
+              class="ms-5 text-gray-500 hover:text-gray-900 dark:hover:text-blue-800"
+            >
+              <i class="fa-brands fa-whatsapp text-lg"></i>
+              Whatsapp
+              <span class="sr-only">Whatsapp</span>
+            </a>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
